--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <style name="heading_text">
-        <item name="android:fontFamily">@font/serif</item>
+        <item name="android:fontFamily">@font/serif_heading</item>
         <item name="android:textSize">20sp</item>
         <item name="android:textColor">#454545</item>
     </style>
