--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,23 +3,24 @@
     <style name="heading_text">
         <item name="android:fontFamily">@font/serif_heading</item>
         <item name="android:textSize">20sp</item>
-        <item name="android:textColor">#454545</item>
+        <item name="android:textColor">@color/ui_text_dark</item>
     </style>
 
     <style name="body_text">
         <item name="android:fontFamily">@font/sans_serif</item>
         <item name="android:textSize">16sp</item>
-        <item name="android:textColor">#454545</item>
+        <item name="android:textColor">@color/ui_text_standard</item>
     </style>
 
     <style name="reader_text">
         <item name="android:fontFamily">@font/serif</item>
         <item name="android:textSize">16sp</item>
-        <item name="android:textColor">#454545</item>
+        <item name="android:textColor">@color/ui_text_standard</item>
     </style>
 
     <style name="autocomplete_text">
         <item name="android:fontFamily">@font/sans_serif</item>
         <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/ui_text_standard</item>
     </style>
 </resources>
