--- a/app/src/main/res/navigation/browse.xml
+++ b/app/src/main/res/navigation/browse.xml
@@ -3,17 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/browse"
-    app:startDestination="@id/fandomTypeSelectionFragment">
+    app:startDestination="@id/browseSearchFragment">
 
-    <fragment
-        android:id="@+id/fandomTypeSelectionFragment"
-        android:name="org.eidos.reader.ui.fandoms.FandomTypeSelectionFragment"
-        android:label="fragment_fandom_type_selection"
-        tools:layout="@layout/fragment_fandom_type_selection" >
-        <action
-            android:id="@+id/action_fandomTypeSelectionFragment_to_workListFragment"
-            app:destination="@id/workListFragment" />
-    </fragment>
     <fragment
         android:id="@+id/workListFragment"
         android:name="org.eidos.reader.ui.worklist.WorkListFragment"
@@ -41,4 +32,12 @@
         android:name="org.eidos.reader.ui.worklistfilter.WorkListFilterFragment"
         android:label="WorkListFilterFragment" />
     <include app:graph="@navigation/work_reader" />
+    <fragment
+        android:id="@+id/browseSearchFragment"
+        android:name="org.eidos.reader.ui.browse.search.BrowseSearchFragment"
+        android:label="BrowseSearchFragment" >
+        <action
+            android:id="@+id/action_browseSearchFragment_to_workListFragment"
+            app:destination="@id/workListFragment" />
+    </fragment>
 </navigation>
