Delete unused files, reorganised UI packages, and add MavenCentral

--- a/app/src/main/res/layout/fragment_work_reader.xml
+++ b/app/src/main/res/layout/fragment_work_reader.xml
@@ -5,7 +5,7 @@
     android:id="@+id/mainScrollView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.reader.WorkReaderFragment">
+    tools:context=".ui.read.reader.WorkReaderFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
