--- a/app/src/main/res/layout/fragment_work_list.xml
+++ b/app/src/main/res/layout/fragment_work_list.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.worklist.WorkListFragment">
+    tools:context=".ui.browse.worklist.WorkListFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/workListDisplay"
