--- a/app/src/main/res/navigation/read.xml
+++ b/app/src/main/res/navigation/read.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/readingListFragment"
-        android:name="org.eidos.reader.ui.readinglist.ReadingListFragment"
+        android:name="org.eidos.reader.ui.read.readinglist.ReadingListFragment"
         android:label="fragment_reading_list"
         tools:layout="@layout/fragment_reading_list" />
 </navigation>
