Fix crash when deselecting search type and delete unnecessary files

--- a/app/src/main/res/layout/fragment_browse_search.xml
+++ b/app/src/main/res/layout/fragment_browse_search.xml
@@ -29,6 +29,7 @@
         android:layout_height="wrap_content"
         android:padding="@dimen/space_medium_16dp"
         app:checkedChip="@id/allTagsChip"
+        app:selectionRequired="true"
         app:singleLine="false"
         app:singleSelection="true">
 
